@@ -1,4 +1,5 @@
 current:
+  * report QR immediately for video (no inter-frame consistency check)
   * iphone widget back compat updates, add basic test app
   * add python distutils build infrastructure
   * add Obj-C wrapper
